<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FragmentTitle"
        tools:ignore="VisualLintOverlap" />

    <Button
        android:id="@+id/buttonFirst"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:onClick="onClick"
        android:text="@string/fragmentButton"
        android:translationX="200dp"
        tools:ignore="VisualLintOverlap" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:ems="10"
        android:hint="@string/fragmentPlaceHolder"
        android:inputType="text" />
</FrameLayout>